Fix the spacing of the Save Recipe button now that there's an image on that page.

--- a/src/styles.css
+++ b/src/styles.css
@@ -143,6 +143,10 @@
   margin-top: -1%;
 }
 
+.section--save-button {
+  height: 100%;
+}
+
 .section--user-bar {
   display: flex;
   justify-content: space-between;
@@ -206,7 +210,7 @@ body {
   background: linear-gradient(0deg, rgb(216, 237, 235) 45%, rgb(147, 217, 234) 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  height: 100vh;
+  /* max-height: 100vh; */
   max-width: 100vw;
   margin: 0px;
   padding: 10px;
